--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
+    "gh-pages": "^4.0.0",
     "html-loader": "^3.1.2",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
@@ -24,7 +25,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.prod.config",
-    "serve": "webpack serve --config webpack.dev.config"
+    "serve": "webpack serve --config webpack.dev.config",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
